[gd_scene load_steps=4 format=3 uid="uid://dvid1m0m2lsrf"]

[ext_resource type="Script" uid="uid://crdwkxppbqkd2" path="res://scripts/FinalScore.gd" id="1_40ovk"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hsuhp"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wn253"]
content_margin_left = 2.0
content_margin_top = 1.0
content_margin_right = 2.0
content_margin_bottom = 1.0
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_bottom = 1

[node name="FinalScore" type="Node2D"]
script = ExtResource("1_40ovk")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="CanvasLayer/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_hsuhp")

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 40
alignment = 1

[node name="Title" type="Label" parent="CanvasLayer/Control/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Final"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/Control/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="PlayerScore" type="RichTextLabel" parent="CanvasLayer/Control/VBoxContainer/HBoxContainer"]
clip_contents = false
custom_minimum_size = Vector2(500, 2.08165e-12)
layout_mode = 2
bbcode_enabled = true
text = "[center][font_size=30]Player[center][center][font_size=60]39[center]"
fit_content = true
scroll_active = false

[node name="CPUScore" type="RichTextLabel" parent="CanvasLayer/Control/VBoxContainer/HBoxContainer"]
clip_contents = false
custom_minimum_size = Vector2(500, 2.08165e-12)
layout_mode = 2
bbcode_enabled = true
text = "[center][font_size=30]CPU[center][center][font_size=60]34[center]"
fit_content = true
scroll_active = false

[node name="Spacer3" type="Control" parent="CanvasLayer/Control/VBoxContainer"]
custom_minimum_size = Vector2(2.08165e-12, 25)
layout_mode = 2

[node name="QuarterScores" type="Control" parent="CanvasLayer/Control/VBoxContainer"]
custom_minimum_size = Vector2(500, 2.08165e-12)
layout_mode = 2

[node name="GridContainer" type="GridContainer" parent="CanvasLayer/Control/VBoxContainer/QuarterScores"]
custom_minimum_size = Vector2(2.08165e-12, 2.08165e-12)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -55.0
offset_top = -13.5
offset_right = 55.0
offset_bottom = 13.5
grow_horizontal = 2
grow_vertical = 2
columns = 6

[node name="ColumnHeader6" type="PanelContainer" parent="CanvasLayer/Control/VBoxContainer/QuarterScores/GridContainer"]
custom_minimum_size = Vector2(150, 2.08165e-12)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_wn253")

[node name="Team" type="Label" parent="CanvasLayer/Control/VBoxContainer/QuarterScores/GridContainer/ColumnHeader6"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Side"

[node name="ColumnHeader1" type="PanelContainer" parent="CanvasLayer/Control/VBoxContainer/QuarterScores/GridContainer"]
custom_minimum_size = Vector2(50, 2.08165e-12)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_wn253")

[node name="Q1" type="Label" parent="CanvasLayer/Control/VBoxContainer/QuarterScores/GridContainer/ColumnHeader1"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 16
text = "Q1"
horizontal_alignment = 1

[node name="ColumnHeader2" type="PanelContainer" parent="CanvasLayer/Control/VBoxContainer/QuarterScores/GridContainer"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_wn253")

[node name="Q2" type="Label" parent="CanvasLayer/Control/VBoxContainer/QuarterScores/GridContainer/ColumnHeader2"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 16
text = "Q2"
horizontal_alignment = 1

[node name="ColumnHeader3" type="PanelContainer" parent="CanvasLayer/Control/VBoxContainer/QuarterScores/GridContainer"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_wn253")

[node name="Q3" type="Label" parent="CanvasLayer/Control/VBoxContainer/QuarterScores/GridContainer/ColumnHeader3"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 16
text = "Q3"
horizontal_alignment = 1

[node name="ColumnHeader4" type="PanelContainer" parent="CanvasLayer/Control/VBoxContainer/QuarterScores/GridContainer"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_wn253")

[node name="Q4" type="Label" parent="CanvasLayer/Control/VBoxContainer/QuarterScores/GridContainer/ColumnHeader4"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 16
text = "Q4"
horizontal_alignment = 1

[node name="ColumnHeader5" type="PanelContainer" parent="CanvasLayer/Control/VBoxContainer/QuarterScores/GridContainer"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_wn253")

[node name="Total" type="Label" parent="CanvasLayer/Control/VBoxContainer/QuarterScores/GridContainer/ColumnHeader5"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 16
text = "Total"
horizontal_alignment = 1

[node name="Spacer2" type="Control" parent="CanvasLayer/Control/VBoxContainer"]
custom_minimum_size = Vector2(2.08165e-12, 125)
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="CanvasLayer/Control/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="PlayerBoxScore" type="Control" parent="CanvasLayer/Control/VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(500, 2.08165e-12)
layout_mode = 2

[node name="GridContainer" type="GridContainer" parent="CanvasLayer/Control/VBoxContainer/HBoxContainer2/PlayerBoxScore"]
custom_minimum_size = Vector2(2.08165e-12, 2.08165e-12)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -55.0
offset_top = -13.5
offset_right = 55.0
offset_bottom = 13.5
grow_horizontal = 2
grow_vertical = 2
columns = 4

[node name="ColumnHeader1" type="PanelContainer" parent="CanvasLayer/Control/VBoxContainer/HBoxContainer2/PlayerBoxScore/GridContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_wn253")

[node name="RollRange" type="Label" parent="CanvasLayer/Control/VBoxContainer/HBoxContainer2/PlayerBoxScore/GridContainer/ColumnHeader1"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 16
horizontal_alignment = 1

[node name="ColumnHeader2" type="PanelContainer" parent="CanvasLayer/Control/VBoxContainer/HBoxContainer2/PlayerBoxScore/GridContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_wn253")

[node name="Points" type="Label" parent="CanvasLayer/Control/VBoxContainer/HBoxContainer2/PlayerBoxScore/GridContainer/ColumnHeader2"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 16
text = "PTS"
horizontal_alignment = 1

[node name="ColumnHeader3" type="PanelContainer" parent="CanvasLayer/Control/VBoxContainer/HBoxContainer2/PlayerBoxScore/GridContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_wn253")

[node name="Assists" type="Label" parent="CanvasLayer/Control/VBoxContainer/HBoxContainer2/PlayerBoxScore/GridContainer/ColumnHeader3"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 16
text = "AST"
horizontal_alignment = 1

[node name="ColumnHeader4" type="PanelContainer" parent="CanvasLayer/Control/VBoxContainer/HBoxContainer2/PlayerBoxScore/GridContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_wn253")

[node name="Rebounds" type="Label" parent="CanvasLayer/Control/VBoxContainer/HBoxContainer2/PlayerBoxScore/GridContainer/ColumnHeader4"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 16
text = "REB"
horizontal_alignment = 1

[node name="CPUBoxScore" type="Control" parent="CanvasLayer/Control/VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(500, 2.08165e-12)
layout_mode = 2

[node name="GridContainer" type="GridContainer" parent="CanvasLayer/Control/VBoxContainer/HBoxContainer2/CPUBoxScore"]
custom_minimum_size = Vector2(2.08165e-12, 2.08165e-12)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -55.0
offset_top = -13.5
offset_right = 55.0
offset_bottom = 13.5
grow_horizontal = 2
grow_vertical = 2
columns = 4

[node name="ColumnHeader1" type="PanelContainer" parent="CanvasLayer/Control/VBoxContainer/HBoxContainer2/CPUBoxScore/GridContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_wn253")

[node name="RollRange" type="Label" parent="CanvasLayer/Control/VBoxContainer/HBoxContainer2/CPUBoxScore/GridContainer/ColumnHeader1"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 16
horizontal_alignment = 1

[node name="ColumnHeader2" type="PanelContainer" parent="CanvasLayer/Control/VBoxContainer/HBoxContainer2/CPUBoxScore/GridContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_wn253")

[node name="Points" type="Label" parent="CanvasLayer/Control/VBoxContainer/HBoxContainer2/CPUBoxScore/GridContainer/ColumnHeader2"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 16
text = "PTS"
horizontal_alignment = 1

[node name="ColumnHeader3" type="PanelContainer" parent="CanvasLayer/Control/VBoxContainer/HBoxContainer2/CPUBoxScore/GridContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_wn253")

[node name="Assists" type="Label" parent="CanvasLayer/Control/VBoxContainer/HBoxContainer2/CPUBoxScore/GridContainer/ColumnHeader3"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 16
text = "AST"
horizontal_alignment = 1

[node name="ColumnHeader4" type="PanelContainer" parent="CanvasLayer/Control/VBoxContainer/HBoxContainer2/CPUBoxScore/GridContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_wn253")

[node name="Rebounds" type="Label" parent="CanvasLayer/Control/VBoxContainer/HBoxContainer2/CPUBoxScore/GridContainer/ColumnHeader4"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 16
text = "REB"
horizontal_alignment = 1

[node name="Spacer" type="Control" parent="CanvasLayer/Control/VBoxContainer"]
custom_minimum_size = Vector2(2.08165e-12, 100)
layout_mode = 2

[node name="Button" type="Button" parent="CanvasLayer/Control/VBoxContainer"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
size_flags_horizontal = 4
text = "Continue"
